--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -754,7 +754,7 @@
    "id": "689c8296",
    "metadata": {},
    "source": [
-    "- The history of the Nintendo company as far as we know dates back to 1983. Also, 100 Classic Books is the first is the first product which has been published.\n",
+    "- The history of the Nintendo company as far as we know dates back to 1983. Also, 100 Classic Books is the first product which has been published.\n",
     "\n",
     "- Zero: Tsukihami no Kamen is the latest game published in 2016."
    ]
